# ChangeLog for dev-perl/SVN-Mirror
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/SVN-Mirror/ChangeLog,v 1.43 2008/09/13 08:23:53 tove Exp $

*SVN-Mirror-0.75 (13 Sep 2008)

  13 Sep 2008; Torsten Veller <tove@gentoo.org> -SVN-Mirror-0.74.ebuild,
  +SVN-Mirror-0.75.ebuild:
  Bump and cleanup

  10 Sep 2008; Torsten Veller <tove@gentoo.org> -SVN-Mirror-0.68-r1.ebuild,
  -SVN-Mirror-0.72.ebuild:
  Cleanup

*SVN-Mirror-0.74 (10 Sep 2008)

  10 Sep 2008; Torsten Veller <tove@gentoo.org> +SVN-Mirror-0.74.ebuild:
  Version bump

  16 Aug 2008; Torsten Veller <tove@gentoo.org> metadata.xml:
  Remove pclouds from metadata.xml (#49680)

  13 Jan 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  SVN-Mirror-0.73.ebuild:
  ppc. stable

  10 Nov 2007; Samuli Suominen <drac@gentoo.org> SVN-Mirror-0.73.ebuild:
  amd64 stable

  14 Jul 2007; Raúl Porcel <armin76@gentoo.org> SVN-Mirror-0.73.ebuild:
  ia64/x86 stable

  21 Jun 2007; Michael Cummings <mcummings@gentoo.org>
  SVN-Mirror-0.73.ebuild:
  Marking sparc stable

*SVN-Mirror-0.73 (06 Apr 2007)

  06 Apr 2007; Michael Cummings <mcummings@gentoo.org>
  +SVN-Mirror-0.73.ebuild:
  Version bump

  22 Jan 2007; Bryan Østergaard <kloeri@gentoo.org> SVN-Mirror-0.72.ebuild:
  Stable on IA64.

  08 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  SVN-Mirror-0.68-r1.ebuild, SVN-Mirror-0.72.ebuild:
  marking sparc stable

  08 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  -SVN-Mirror-0.70.ebuild, -SVN-Mirror-0.71.ebuild, SVN-Mirror-0.72.ebuild:
  marking amd64 stable

*SVN-Mirror-0.72 (06 Nov 2006)

  06 Nov 2006; Michael Cummings <mcummings@gentoo.org>
  +SVN-Mirror-0.72.ebuild:
  Version bump

*SVN-Mirror-0.71 (03 Oct 2006)

  03 Oct 2006; Christian Hartmann <ian@gentoo.org> -SVN-Mirror-0.57.ebuild,
  -SVN-Mirror-0.59.ebuild, -SVN-Mirror-0.61.ebuild, -SVN-Mirror-0.64.ebuild,
  -SVN-Mirror-0.65.ebuild, -SVN-Mirror-0.66.ebuild, +SVN-Mirror-0.71.ebuild: