@@ -1,6 +1,6 @@
 DIST SVN-Mirror-0.73.tar.gz 124896 RMD160 0b6af9e7b0611d2cf510fe874e10d856b67be3e2 SHA1 9733e39a512af571b39ba236f1e33f20ce517148 SHA256 4c7460a9fa2bf8dfc5aa42b8ddfcc21ab8ee4bc0850a16a6a6d27c890f5692e9
 DIST SVN-Mirror-0.75.tar.gz 122577 RMD160 4912cfcb93d1b1e91fc11e3ab5134d4096a44b5d SHA1 ce78647269f5c984aea444dc503e3f8dec6f4866 SHA256 3f48d92f4210a4b7c1984f25f5d7b7f594ccc0b09c907aa3fa693fc6dd5e0cb5
 EBUILD SVN-Mirror-0.73.ebuild 1006 RMD160 501ee8bd2249e57f26b143c68e2235284da9b69d SHA1 6cc396b41dc5ce26d865839132a556470d807900 SHA256 e86cd9b2c89d37337705c1c03d033da4a9fe7b4b37cd61a56ecaa91ca3aed272
-EBUILD SVN-Mirror-0.75.ebuild 922 RMD160 71643e8abcc3a48af43c57e8810e105f74b25797 SHA1 3f96818aac7ecb403f4e6e948fabe88eb21ed888 SHA256 0665681ed8c0b84ca11fe1e7b9218e35c4ccf7b9a0065ac7a62b8410fcfea6dd
-MISC ChangeLog 6294 RMD160 66d55724bc227fe240bfc06f9f2fae961b9b99cd SHA1 36cb157380e015e1783640c0a3c40c1c93ffc3b8 SHA256 db35c9b43cc7f221ab0afc9bc33e332ac6a4d4908ac3a59dc6da0aaec04edb21
+EBUILD SVN-Mirror-0.75.ebuild 714 RMD160 b5dfbcc23afb8e85d0935cd25f0a73ec0ef8c210 SHA1 28070b18839119a418ff9a46d2d03ffcc1ab56b3 SHA256 cea4446de3be5fb62cc43c0857679a2546cfccb374cd8feab17b8b635261383c
+MISC ChangeLog 6431 RMD160 6e2dec46e5dc340c31656dfcf9be3a9fff0a5e6c SHA1 22b76053adb7a999ef94bd17dd70b81fa5e2fe42 SHA256 99ff0134141406072176e85c441a2043d58253450ec236369ed3d927e61adf9f
 MISC metadata.xml 159 RMD160 312f9ce05a5e6d5b2ae2dd53bf0371d80bb33a7f SHA1 ed741bf99f00660c2cfca56bcd1241336ad47fd7 SHA256 9e7c719a784bb48388c9a12217b85baa75f1b04e9bf049d74b740785fa5006dd
