@@ -1,7 +1,8 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/SVN-Mirror/SVN-Mirror-0.75.ebuild,v 1.1 2008/09/13 08:23:53 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/SVN-Mirror/SVN-Mirror-0.75.ebuild,v 1.2 2009/09/28 17:00:12 betelgeuse Exp $
 
+EAPI="2"
 MODULE_AUTHOR=CLKAO
 inherit perl-module eutils
 
@@ -12,7 +13,7 @@ LICENSE="|| ( Artistic GPL-2 )"
 KEYWORDS="~amd64-linux ~x86-linux ~ppc-macos ~x86-macos"
 IUSE=""
 
-DEPEND=">=dev-util/subversion-1.1.3
+DEPEND=">=dev-util/subversion-1.1.3[perl]
 	>=dev-perl/URI-1.34
 	>=dev-perl/TermReadKey-2.21
 	>=dev-perl/SVN-Simple-0.26
@@ -23,11 +24,3 @@ DEPEND=">=dev-util/subversion-1.1.3
 	dev-lang/perl"
 
 SRC_TEST=do
-
-pkg_setup() {
-	if ! built_with_use dev-util/subversion perl ; then
-		eerror "You need subversion compiled with Perl bindings."
-		eerror "USE=\"perl\" emerge subversion"
-		die "Need Subversion compiled with Perl bindings."
-	fi
-}
